@@ -81,105 +81,6 @@
 
 # nova_api_version = '2.1'
 
-#
-# Main devices dictionary, containing a list of available ACOS devices.
-#
-
-devices = {
-    # A sample ACOS 2.7.2 box
-    # "ax2": {
-    #     "host": "10.10.100.20",
-    #     "conn-limit": 8000000,
-    #     "port": 8443,
-    #     "username": "admin",
-    #     "password": "a10",
-    #     "api_version": "2.1",
-    # },
-    # A sample ACOS 4.0.1 box
-    # "ax4": {
-    #     "host": "10.10.100.20",
-    #     "conn-limit": 8000000,
-    #     "port": 443,
-    #     "username": "admin",
-    #     "password": "a10",
-    #     "api_version": "3.0",
-    # },
-    # The complete list of available options for a device entry, with
-    # their default values.
-    # "axN": {
-    #
-    # Hostname of ACOS device
-    #     "host": <required>,
-    #
-    # Protocol and port number for AxAPI on ACOS device
-    #     "protocol": "https",
-    #     "port": 443,
-    #
-    # Specify the maximum number of concurrent connections allowed on a
-    # real server.
-    #    "conn-limit": 8000000,
-    #
-    # Admin username for ACOS device
-    #     "username": <required>,
-    #
-    # Admin password for ACOS device
-    #     "password": <required>,
-    #
-    # Which version of AxAPI to use; "2.1" for ACOS<3.0, and "3.0" for >=3.0
-    #     "api_version": "2.1",
-    #
-    # status of device; True if online and ready for use
-    #     "status": True,
-    #
-    # Set to true if you want automatic source nat on vports
-    #     "autosnat": False,
-    #
-    # Set to the name of a nat pool to use that pool for source nat on vports
-    # The nat pool must already exist on the ACOS device.
-    #     "source_nat_pool": None,
-    #
-    # Partition method; "LSI" to put all slb's in a single shared partition,
-    # or "ADP" to use a partition per tenant. Partitions are RBA style in
-    # ACOS 2.x, and L3V in ACOS 4.x.
-    #     "v_method": "LSI",
-    #
-    # If using a shared partition (v_method=LSI), then this field configures
-    # which partition to use. By default, it is the main shared partition.
-    #     "shared_partition": "shared",
-    #
-    # For nova based pool/service-group members, setting this to True will
-    # cause the driver to lookup the nova server's floating ip and use that
-    # for communication instead of its neutron port IP address.
-    #     "use_float": False,
-    #
-    # Virtual servers will be created on this VRID. The VRID must already
-    # be configured on the device. Example values: None, 1, 2, ...
-    #     "default_virtual_server_vrid": None,
-    #
-    # Enable IP in IP on vports.
-    #     "ipinip": False,
-    #
-    # Contains a list of hostnames or IP addresses that the driver will run
-    # the 'ha sync' command against whenever a write operation occurs.
-    #     "ha_sync_list": [],
-    #
-    # Enable or disable calling write memory directly after any operation that
-    # changes ACOS's running state. Turning this off also disables all ha sync
-    # operations, regardless of the settings in ha_sync_list.
-    #     "write_memory": True,
-    # },
-}
-
-# vthunder = {
-#     'username': 'admin',
-#     'password': 'a10',
-
-#     'nova_flavor': 'vthunder.small',  # 1 core, 4096MB ram, 12GB disk
-#     'glance_image': None,
-
-#     'vthunder_management_network': 'private-mgmt',
-#     'vthunder_data_networks': [ 'vip-net', 'member-net' ],
-
 # # License the launched instances
 #
 #     'license_manager': {
